tests/baselines/reference/class2.errors.txt
==== tests/cases/compiler/class2.ts (2 errors) ====
    class foo { constructor() { static f = 3; } }
                                ~~~~~~
!!! error TS1129: Statement expected.
                                                ~
!!! error TS1128: Declaration or statement expected.